feat(workflow): implement tasks 6-9, backend workflow definition handling and tests